_examples/kuard/kuard-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: websites

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kuard
  namespace: websites
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
      - name: kuard
        image: gcr.io/kuar-demo/kuard-amd64:1

---

apiVersion: v1
kind: Service
metadata:
  name: kuard
  namespace: websites
spec:
  type: NodePort
  ports:
  - name: headless
    port: 8080
    targetPort: 8080
  selector:
    app: kuard
